# litellm-claude-aliases

./: .gitignore  LICENSE  README.md  pyproject.toml
src/litellm_claude_aliases/: __init__.py  aliases.py  cli.py  config.py  patch.py
tests/: smoke_patch.py  test_aliases.py  test_cli_parse.py  test_patch.py
