[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "litellm-claude-aliases"
version = "0.1.0"
description = "Opt-in model name aliasing for LiteLLM proxy, designed for Claude Desktop"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "udit.raj"}]
keywords = ["litellm", "anthropic", "claude", "proxy", "aliases"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "litellm[proxy]>=1.40.0",
]

[project.scripts]
litellm-with-aliases = "litellm_claude_aliases.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
